fix(font-size): on mobile

--- a/src/components/Display/Display.module.css
+++ b/src/components/Display/Display.module.css
@@ -3,7 +3,7 @@
   border-radius: 4px;
   text-align: right;
   padding: 2px;
-  font-size: clamp(1rem, 2.5vw, 2rem);
+  font-size: clamp(2rem, 2.5vw, 2rem);
   min-height: 52px;
   color: white;
   margin-bottom: 20px;
